# Devotional-AI-Chatbot

./: README.md  pyproject.toml  requirements.txt
app/: ingest.py  llm.py  main.py  prompt_template.py  retriever.py  schemas.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Header.jsx  InputArea.jsx  MandalaBg.jsx  MessageBubble.jsx  Particles.jsx  WelcomeScreen.jsx
frontend/src/hooks/: useChat.js
frontend/src/styles/: spiritual.css
